Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41583

TextEdit: text margin changes are not handled properly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.4.1
    • 5.3.2, 5.4.0 Alpha, 5.4.0 Beta
    • None
    • Linux 5.4
    • 5fa4e1d0981cbe52392f474d0297678915bc48f5

    Description

      If we access the text property during component construction the text is reset.

      import QtQuick 2.2
      import QtQuick.Window 2.2
      
      Window {
          width: 360
          height: 360
      
          property int styledMargin: 4
      
          TextEdit {
              anchors.fill: parent
              text: "This is some text"
              textMargin: styledMargin
              property bool test: !text // <==
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            davidedmundson David Edmundson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes